Affichage des ouvertures et installation fonctionnels
FossilOrigin-Name: 3a1b0e635b4fb925d7b6ff17e6d6b1f5b5f6297a

--- a/ouvertures/config.json
+++ b/ouvertures/config.json
@@ -6,7 +6,7 @@
 		"sunday": ["14:00", "18:00"]
 	},
 	"closed": [
-		["december 25", "january 2nd"]
+		["december 25", "january 01"]
 	],
 	"timezone": "Europe/Paris"
 }
