--- a/stock_velos/garradin_plugin.ini
+++ b/stock_velos/garradin_plugin.ini
@@ -3,6 +3,7 @@ description="Gestion de stock de vélos pour atelier de réparation (La rustine)
 auteur="BohwaZ / La rustine"
 url="http://larustine.org/"
 version="3.1"
-min_version="0.8"
 menu=1
+menu_condition="{$user.droit_config} >= {Membres::DROIT_ECRITURE}"
+min_version="0.9"
 config=0
