--- a/stock_velos/garradin_plugin.ini
+++ b/stock_velos/garradin_plugin.ini
@@ -2,8 +2,8 @@ nom="Gestion des vélos"
 description="Gestion de stock de vélos pour atelier de réparation (La rustine)"
 auteur="BohwaZ / La rustine"
 url="http://larustine.org/"
-version="3.3"
+version="3.4"
 menu=1
-menu_condition="{$user.droit_membres} >= {Membres::DROIT_ECRITURE}"
-min_version="1.0"
+menu_condition="{$user.droit_membres} >= {$session::ACCESS_WRITE}"
+min_version="1.1"
 config=0
