--- a/stock_velos/garradin_plugin.ini
+++ b/stock_velos/garradin_plugin.ini
@@ -4,6 +4,6 @@ auteur="BohwaZ / La rustine"
 url="http://larustine.org/"
 version="3.4"
 menu=1
-menu_condition="{$user.droit_membres} >= {$session::ACCESS_WRITE}"
+menu_condition="{$user.perm_users} >= {ACCESS_WRITE}"
 min_version="1.1"
 config=0
