--- a/caisse/garradin_plugin.ini
+++ b/caisse/garradin_plugin.ini
@@ -1,8 +1,8 @@
 nom="Caisse"
-description="Gestion de caisse (version alpha !)"
+description="Gestion de caisse"
 auteur="BohwaZ"
 url="https://garradin.eu/"
-version="0.3.3"
+version="0.4.0"
 menu=1
 config=0
 min_version="1.1"
