Add last payments debug
FossilOrigin-Name: 5958f2c804ce58cb40258e5c6323468c49c48ef7

--- a/helloasso/garradin_plugin.ini
+++ b/helloasso/garradin_plugin.ini
@@ -1,5 +1,5 @@
 nom="HelloAsso"
-description="Import des données des paiements HelloAsso"
+description="Voir les paiements HelloAsso et les importer automatiquement"
 auteur="Garradin"
 url="https://garradin.eu/"
 version="0.1"
