Add orders to helloasso plugin
FossilOrigin-Name: 46a87cd9f337077f7313e17a08751989883d18ed

--- a/helloasso/config.json
+++ b/helloasso/config.json
@@ -1,16 +1,5 @@
 {
     "oauth": null,
     "client_id": null,
-    "match_email_field": true,
-    "merge_names": 0,
-    "map_user_fields": {
-		"firstName": "nom",
-		"lastName": "nom",
-		"company": null,
-		"email": "email",
-		"address": "adresse",
-		"city": "ville",
-		"zipCode": "code_postal",
-		"country": "pays"
-    }
+    "match_email_field": true
 }
