Implement sync/mirroring of HelloAsso data locally
FossilOrigin-Name: 02e30d80c3a1a2ba63e27cb2a75e05d47275fc03

--- a/helloasso/garradin_plugin.ini
+++ b/helloasso/garradin_plugin.ini
@@ -2,8 +2,8 @@ nom="HelloAsso"
 description="Voir les paiements HelloAsso et les importer automatiquement"
 auteur="Garradin"
 url="https://garradin.eu/"
-version="0.2"
+version="0.3"
 menu=1
-menu_condition="{$user.perm_users} >= {ACCESS_ADMIN} OR {$user.perm_config} >= {ACCESS_ADMIN}"
+menu_condition="{$user.perm_users} >= {ACCESS_WRITE} OR {$user.perm_config} >= {ACCESS_ADMIN}"
 config=1
-min_version="1.1.12"
+min_version="1.1.14"
