--- a/caisse/garradin_plugin.ini
+++ b/caisse/garradin_plugin.ini
@@ -1,8 +1,9 @@
 nom="Caisse"
 description="Gestion de caisse"
-auteur="BohwaZ"
+auteur="Garradin"
+description="**BETA** Merci de faire des retours à garradin@garradin.eu"
 url="https://garradin.eu/"
-version="0.4.1"
+version="0.5.0"
 menu=1
 config=0
 min_version="1.1.16"
