--- a/caisse/garradin_plugin.ini
+++ b/caisse/garradin_plugin.ini
@@ -1,9 +1,8 @@
 nom="Caisse"
-description="Gestion de caisse"
+description="Gestion de caisse informatisée"
 auteur="Garradin"
-description="**BETA** Merci de faire des retours à garradin@garradin.eu"
 url="https://garradin.eu/"
-version="0.5.1"
+version="0.5.2"
 menu=1
 config=0
-min_version="1.1.19"
+min_version="1.1.20"
