--- a/helloasso/garradin_plugin.ini
+++ b/helloasso/garradin_plugin.ini
@@ -1,6 +1,6 @@
-nom="HelloAsso"
+name="HelloAsso"
 description="Voir les paiements HelloAsso et les importer automatiquement"
-auteur="Garradin"
+author="Garradin"
 url="https://garradin.eu/"
 version="0.3.3"
 menu=1
