--- a/welcome/garradin_plugin.ini
+++ b/welcome/garradin_plugin.ini
@@ -1,8 +1,8 @@
-nom="Bannière de bienvenue"
+name="Bannière de bienvenue"
 description="Cette extension affiche un message à la connexion, invitant à contribuer à Garradin"
-auteur="Garradin"
+author="Garradin"
 url="https://garradin.eu/"
 version="0.2"
 menu=0
 config=0
-min_version="1.1"
+min_version="1.2"
