--- a/taima/garradin_plugin.ini
+++ b/taima/garradin_plugin.ini
@@ -1,8 +1,6 @@
-nom="Tāima - Suivi du temps"
+name="Tāima - Suivi du temps"
 description="Permet d'enregistrer le temps passé par des bénévoles ou salarié⋅e⋅s sur une tâche et de reporter ce temps dans la comptabilité"
-auteur="Garradin"
+author="Garradin"
 url="https://garradin.eu/"
 version="0.5.1"
-menu=1
-config=0
 min_version="1.2.0"
