--- a/caisse/garradin_plugin.ini
+++ b/caisse/garradin_plugin.ini
@@ -1,8 +1,6 @@
-nom="Caisse"
+name="Caisse"
 description="Gestion de caisse informatisée"
-auteur="Garradin"
+author="Garradin"
 url="https://garradin.eu/"
 version="0.6.1"
-menu=1
-config=0
 min_version="1.2.0"
