--- a/stock_velos/garradin_plugin.ini
+++ b/stock_velos/garradin_plugin.ini
@@ -1,9 +1,6 @@
-nom="Gestion des vélos"
-description="Gestion de stock de vélos pour atelier de réparation (La rustine)"
-auteur="BohwaZ / La rustine"
-url="http://larustine.org/"
-version="3.5.1"
-menu=1
-menu_condition="{$user.perm_users} >= {ACCESS_WRITE}"
-min_version="1.1.19"
-config=0
+name="Gestion des vélos"
+description="Gestion de stock de vélos pour atelier de réparation"
+author="BohwaZ / La rustine"
+url="https://larustine.org/"
+version="4.0.1"
+min_version="1.3.0"
