--- a/taima/garradin_plugin.ini
+++ b/taima/garradin_plugin.ini
@@ -1,6 +1,6 @@
-name="Tāima - Suivi du temps"
+name="Suivi du temps"
 description="Permet d'enregistrer le temps passé par des bénévoles ou salarié⋅e⋅s sur une tâche et de reporter ce temps dans la comptabilité"
 author="Garradin"
 url="https://garradin.eu/"
-version="0.5.2"
+version="0.5.4"
 min_version="1.3.0"
