--- a/webstats/garradin_plugin.ini
+++ b/webstats/garradin_plugin.ini
@@ -1,8 +1,6 @@
-nom="Statistiques web"
+name="Statistiques web"
 description="Enregistre et visualise des statistiques sur la fréquentation du site web public"
-auteur="Garradin"
+author="Garradin"
 url="https://garradin.eu/"
-version="0.1"
-menu=1
-config=0
-min_version="1.1.11"
+version="0.2.1"
+min_version="1.3.0"
