Refactor test plugin
FossilOrigin-Name: 54fd17e1873ac845c185092869b4de6911e157f6

--- a/test/garradin_plugin.ini
+++ b/test/garradin_plugin.ini
@@ -1,8 +1,6 @@
-nom="Plugin de test"
-description="Cette extension affiche une entrée de test dans le menu"
-auteur="Garradin"
-url="http://garradin.eu/"
-version="0.4"
-menu=1
-config=1
-min_version="1.1.0"
+name="Extension de test"
+description="Cette extension affiche une entrée dans le menu"
+author="Garradin"
+url="https://garradin.eu/"
+version="0.5"
+min_version="1.3"
