--- a/dompdf/garradin_plugin.ini
+++ b/dompdf/garradin_plugin.ini
@@ -1,8 +1,6 @@
-nom="DomPDF - Génération de PDF"
+name="DomPDF - Génération de PDF"
 description="Permet de générer des PDF avec la librairie DomPDF"
-auteur="Garradin"
+author="Garradin"
 url="https://garradin.eu/"
-version="1.2.1"
-menu=0
-config=0
-min_version="1.1.12"
+version="2.0.1"
+min_version="1.3"
