--- a/caisse/paheko_plugin.ini
+++ b/caisse/paheko_plugin.ini
@@ -1,6 +1,6 @@
 name="Caisse"
 description="Gestion de caisse informatisée"
-author="Garradin"
-url="https://garradin.eu/"
+author="Paheko"
+url="https://paheko.cloud/"
 version="0.6.1"
 min_version="1.3"
