--- a/dompdf/paheko_plugin.ini
+++ b/dompdf/paheko_plugin.ini
@@ -1,6 +1,8 @@
 name="DomPDF - Génération de PDF"
-description="Permet de générer des PDF avec la librairie DomPDF"
-author="Garradin"
-url="https://garradin.eu/"
+description="Permet de générer des PDF avec la librairie DomPDF. Utile pour l'hébergement sur serveur mutualisé.
+**Attention** DomPDF est parfois lent ou plante selon le type de document.
+Aucun support ne sera apporté sur l'utilisation de cette extension."
+author="DomPDF"
+url="https://dompdf.github.io/"
 version="2.0.1"
 min_version="1.3"
