--- a/test/paheko_plugin.ini
+++ b/test/paheko_plugin.ini
@@ -1,6 +1,6 @@
 name="Extension de test"
 description="Cette extension affiche une entrée dans le menu"
-author="Garradin"
-url="https://garradin.eu/"
+author="Paheko"
+url="https://paheko.cloud/"
 version="0.5"
 min_version="1.3"
