--- a/webstats/paheko_plugin.ini
+++ b/webstats/paheko_plugin.ini
@@ -1,6 +1,6 @@
 name="Statistiques web"
 description="Enregistre et visualise des statistiques sur la fréquentation du site web public"
-author="Garradin"
-url="https://garradin.eu/"
+author="Paheko"
+url="https://paheko.cloud/"
 version="0.2.1"
 min_version="1.3"
