--- a/git_documents/paheko_plugin.ini
+++ b/git_documents/paheko_plugin.ini
@@ -1,8 +1,8 @@
 nom="Git - synchro documents"
 description="Synchronise les documents avec un repository Git"
-auteur="Garradin"
-url="https://garradin.eu/"
+auteur="BohwaZ"
+url="https://bohwaz.net/"
 version="0.2"
 menu=0
 config=1
-min_version="1.1"
+min_version="1.3"
