--- a/reservations/paheko_plugin.ini
+++ b/reservations/paheko_plugin.ini
@@ -1,8 +1,6 @@
-nom="Réservations"
+name="Réservations"
 description="Permet de configurer des créneaux et permettre aux adhérents de s'y inscrire"
-auteur="BohwaZ"
-url="https://garradin.eu/"
-version="0.6.4"
-menu=1
-config=0
-min_version="1.1.19"
+author="Paheko"
+url="https://paheko.cloud/"
+version="0.6.5"
+min_version="1.3"
