--- a/stock_velos/paheko_plugin.ini
+++ b/stock_velos/paheko_plugin.ini
@@ -1,6 +1,6 @@
 name="Gestion des vélos"
 description="Gestion de stock de vélos pour atelier de réparation"
-author="BohwaZ / La rustine"
+author="La rustine"
 url="https://larustine.org/"
 version="4.0.0"
 min_version="1.3"
