--- a/welcome/paheko_plugin.ini
+++ b/welcome/paheko_plugin.ini
@@ -1,6 +1,6 @@
 name="Bannière de bienvenue"
-description="Cette extension affiche un message à la connexion, invitant à contribuer à Garradin"
-author="Garradin"
-url="https://garradin.eu/"
+description="Cette extension affiche un message à la connexion, invitant à contribuer à Paheko"
+author="Paheko"
+url="https://paheko.cloud/"
 version="0.2"
 min_version="1.3"
