--- a/caisse/plugin.ini
+++ b/caisse/plugin.ini
@@ -4,3 +4,7 @@ author="Paheko"
 url="https://paheko.cloud/"
 version="0.6.1"
 min_version="1.3"
+menu=true
+home_button=true
+restrict_section="users"
+restrict_level="write"
