--- a/stock_velos/plugin.ini
+++ b/stock_velos/plugin.ini
@@ -4,3 +4,6 @@ author="La rustine"
 url="https://larustine.org/"
 version="4.0.0"
 min_version="1.3"
+menu=1
+restrict_section="users"
+restrict_level="write"
