--- a/webstats/plugin.ini
+++ b/webstats/plugin.ini
@@ -4,3 +4,6 @@ author="Paheko"
 url="https://paheko.cloud/"
 version="0.2.1"
 min_version="1.3"
+home_button=true
+restrict_section="web"
+restrict_level="read"
