--- a/caisse/plugin.ini
+++ b/caisse/plugin.ini
@@ -1,7 +1,8 @@
 name="Caisse"
-description="Gestion de caisse informatisée"
+description="Gestion de caisse informatisée. Comme une caisse enregistreuse, mais sur ordinateur :-)
+Pour gérer par exemple une caisse dans un atelier vélo, ou une épicerie solidaire."
 author="Paheko"
-url="https://paheko.cloud/"
+author_url="https://paheko.cloud/"
 version="0.6.1"
 min_version="1.3"
 menu=true
