Rename url to author_url in plugin.ini
FossilOrigin-Name: 56bbf6c83a9705aec2665e1149b35239120b7bb4

--- a/dompdf/plugin.ini
+++ b/dompdf/plugin.ini
@@ -3,6 +3,6 @@ description="Permet de générer des PDF avec la librairie DomPDF. Utile pour l'
 **Attention** DomPDF est parfois lent ou plante selon le type de document.
 Aucun support ne sera apporté sur l'utilisation de cette extension."
 author="DomPDF"
-url="https://dompdf.github.io/"
+author_url="https://dompdf.github.io/"
 version="2.0.3"
 min_version="1.3"
