--- a/git_documents/plugin.ini
+++ b/git_documents/plugin.ini
@@ -1,8 +1,7 @@
-nom="Git - synchro documents"
+name="Git - synchro documents"
 description="Synchronise les documents avec un repository Git"
-auteur="BohwaZ"
-url="https://bohwaz.net/"
+author="BohwaZ"
+author_url="https://bohwaz.net/"
 version="0.2"
 menu=0
-config=1
 min_version="1.3"
