--- a/stock_velos/plugin.ini
+++ b/stock_velos/plugin.ini
@@ -1,7 +1,7 @@
 name="Gestion des vélos"
 description="Gestion de stock de vélos pour atelier de réparation"
 author="La rustine"
-url="https://larustine.org/"
+author_url="https://larustine.org/"
 version="4.0.0"
 min_version="1.3"
 menu=1
