--- a/taima/plugin.ini
+++ b/taima/plugin.ini
@@ -1,6 +1,6 @@
 name="Suivi du temps"
-description="Permet d'enregistrer le temps passé par des bénévoles ou salarié⋅e⋅s sur une tâche et de reporter ce temps dans la comptabilité"
+description="Permet d'enregistrer le temps passé par des bénévoles ou salarié⋅e⋅s sur une tâche et de valoriser ce temps dans la comptabilité."
 author="Paheko"
-url="https://paheko.cloud/"
+author_url="https://paheko.cloud/"
 version="0.6.0"
 min_version="1.3"
