--- a/reservations/plugin.ini
+++ b/reservations/plugin.ini
@@ -1,6 +1,6 @@
 name="Réservations"
 description="Permet de configurer des créneaux et permettre aux adhérents de s'y inscrire"
 author="Paheko"
-url="https://paheko.cloud/"
+author_url="https://paheko.cloud/"
 version="0.6.5"
 min_version="1.3"
