--- a/webstats/plugin.ini
+++ b/webstats/plugin.ini
@@ -1,7 +1,7 @@
 name="Statistiques web"
 description="Enregistre et visualise des statistiques sur la fréquentation du site web public"
 author="Paheko"
-url="https://paheko.cloud/"
+author_url="https://paheko.cloud/"
 version="0.2.1"
 min_version="1.3"
 home_button=true
