--- a/dompdf/plugin.ini
+++ b/dompdf/plugin.ini
@@ -1,5 +1,5 @@
 name="DomPDF - Génération de PDF"
-description="Permet de générer des PDF avec la librairie DomPDF. Utile pour l'hébergement sur serveur mutualisé.\n**Attention** DomPDF est parfois lent ou plante selon le type de document.\nAucun support ne sera apporté sur l'utilisation de cette extension."
+description="Permet de générer des PDF avec la librairie DomPDF. Utile pour l'hébergement sur serveur mutualisé.\n**Attention** DomPDF est parfois lent, plante, ou produit des bugs, selon le type de document.\nAucun support ne sera apporté sur l'utilisation de cette extension."
 author="DomPDF"
 author_url="https://dompdf.github.io/"
 version="2.0.3"
