--- a/welcome/plugin.ini
+++ b/welcome/plugin.ini
@@ -1,5 +1,5 @@
 name="Bannière de bienvenue"
-description="Cette extension affiche un message à la connexion, invitant à contribuer à Paheko"
+description="Affiche un message sur la page d'accueil, invitant à contribuer à Paheko"
 author="Paheko"
 author_url="https://paheko.cloud/"
 version="0.2"
