Fix typo in Taima, rename domPDF
FossilOrigin-Name: ce4cf904b4665dc2051095e7536722524be9e7a6

--- a/dompdf/plugin.ini
+++ b/dompdf/plugin.ini
@@ -1,4 +1,4 @@
-name="DomPDF - Génération de PDF"
+name="DomPDF"
 description="Permet de générer des PDF avec la librairie DomPDF. Utile pour l'hébergement sur serveur mutualisé.\n**Attention** DomPDF est parfois lent, plante, ou produit des bugs, selon le type de document.\nAucun support ne sera apporté sur l'utilisation de cette extension."
 author="DomPDF"
 author_url="https://dompdf.github.io/"
