Add Crédit Mutuel tool, and documentation
FossilOrigin-Name: 386c6bc917143e7e15e504bf3aea9b87574e0d2d

--- a/acc_tools/plugin.ini
+++ b/acc_tools/plugin.ini
@@ -1,5 +1,5 @@
 name="Outils comptable avancés"
-description="Transformation d'imports PayPal et Crédit Mutuel"
+description="Affectation automatique de comptes à un fichier d'import simplifié.\nTransformation d'imports PayPal et Crédit Mutuel."
 author="Kidideux"
 author_url="https://kd2.org/"
 home_button=true
