--- a/usermap/plugin.ini
+++ b/usermap/plugin.ini
@@ -1,5 +1,5 @@
 name="Répartition géographique des membres"
-description="Permet de connaître la répartition géographique des membres, par distance par rapport à une adresse, et sur une carte."
+description="Permet de connaître la répartition géographique des membres, par distance par rapport à une adresse, et sur une carte. (Uniquement pour les adresses en France.)"
 author="Paheko"
 author_url="https://paheko.cloud/"
 version="0.1.0"
