Allow for auto-closing of tabs
FossilOrigin-Name: 1813025ccc43cf655c01fbfce90819fb9b5ec577

--- a/caisse/config.json
+++ b/caisse/config.json
@@ -1,4 +1,5 @@
 {
 	"allow_custom_user_name": false,
-	"send_email_when_closing": null
+	"send_email_when_closing": null,
+	"auto_close_tabs": true
 }
