Allow to list and export all product sales and all payments
FossilOrigin-Name: 288c942f2bb3c44af78381dd546ad638b2178d7a

--- a/caisse/plugin.ini
+++ b/caisse/plugin.ini
@@ -8,3 +8,5 @@ menu=true
 home_button=true
 restrict_section="users"
 restrict_level="write"
+restrict_details="La configuration de la caisse (produits, stock, etc.) est réservée aux membres administrateurs de la comptabilité."
+doc_url="https://paheko.cloud/extension-caisse"
