Add doc_url everywhere
FossilOrigin-Name: 10a56579f7a76e2a352cf6ba7dc24bd54c17f889

--- a/dompdf/plugin.ini
+++ b/dompdf/plugin.ini
@@ -4,3 +4,4 @@ author="DomPDF"
 author_url="https://dompdf.github.io/"
 version="3.0.0"
 min_version="1.3"
+doc_url="https://fossil.kd2.org/paheko/wiki?name=Configuration/PDF"
