--- a/stock_velos/plugin.ini
+++ b/stock_velos/plugin.ini
@@ -7,3 +7,4 @@ min_version="1.3"
 menu=1
 restrict_section="users"
 restrict_level="write"
+doc_url="https://paheko.cloud/gestion-de-stock-de-velos"
