--- a/taima/plugin.ini
+++ b/taima/plugin.ini
@@ -4,3 +4,4 @@ author="Paheko"
 author_url="https://paheko.cloud/"
 version="1.0.1"
 min_version="1.3.6"
+doc_url="https://paheko.cloud/suivi-du-temps"
