--- a/usermap/plugin.ini
+++ b/usermap/plugin.ini
@@ -7,3 +7,4 @@ min_version="1.3.8"
 restrict_section="users"
 restrict_level="read"
 home_button=true
+doc_url="https://paheko.cloud/repartition-geographique-des-membres"
