--- a/webstats/plugin.ini
+++ b/webstats/plugin.ini
@@ -7,3 +7,4 @@ min_version="1.3"
 home_button=true
 restrict_section="web"
 restrict_level="read"
+doc_url="https://paheko.cloud/extension-statistiques-web"
