--- a/pim/plugin.ini
+++ b/pim/plugin.ini
@@ -1,7 +1,6 @@
 name="Agenda et contacts"
 description="Gestion de l'agenda et contacts de chaque membre, synchronisé avec CalDAV/CardDAV sur mobile."
-author="Paheko"
+author="BohwaZ"
 author_url="https://paheko.cloud/"
 version="0.1.0"
 min_version="1.3.12"
-;doc_url="https://paheko.cloud/"
