Allow to subscribe to a fee directly from the cash register
FossilOrigin-Name: 2a293dacfdcd9432580fc51f7672cb03cb4bd848

--- a/caisse/config.json
+++ b/caisse/config.json
@@ -2,5 +2,6 @@
 	"allow_custom_user_name": false,
 	"send_email_when_closing": null,
 	"auto_close_tabs": true,
-	"auto_sync": true
+	"auto_sync": true,
+	"show_services": true
 }
