--- a/helloasso/plugin.ini
+++ b/helloasso/plugin.ini
@@ -3,6 +3,6 @@ description="Voir les paiements HelloAsso et les importer automatiquement"
 author="Paheko"
 url="https://paheko.cloud/"
 version="0.4.0"
-menu=1
-config=1
+menu=true
+home_button=true
 min_version="1.3.19"
