--- a/helloasso/plugin.ini
+++ b/helloasso/plugin.ini
@@ -3,6 +3,8 @@ description="Voir les paiements HelloAsso et les importer automatiquement"
 author="Paheko"
 url="https://paheko.cloud/"
 version="0.5.0"
-menu=true
+menu=false
 home_button=true
 min_version="1.3.19"
+restrict_section="users"
+restrict_level="write"
