Add page to configure form option
FossilOrigin-Name: 257f064d066cc1aae86b3f9d6af86b753c733136

--- a/helloasso/plugin.ini
+++ b/helloasso/plugin.ini
@@ -1,7 +1,8 @@
-name="HelloAsso"
-description="Voir les paiements HelloAsso et les importer automatiquement"
+name="HelloAsso (TEST)"
+description="(En TEST, voir la documentation pour les détails.)\nPour voir et synchroniser les paiements effectués sur HelloAsso, et transformer les adhésions en membres Paheko.\nAucune information n'est modifiée dans le compte HelloAsso."
 author="Paheko"
 url="https://paheko.cloud/"
+doc_url="https://paheko.cloud/extension-helloasso"
 version="0.5.0"
 menu=false
 home_button=true
