--- a/helloasso/plugin.ini
+++ b/helloasso/plugin.ini
@@ -1,9 +1,9 @@
-name="HelloAsso (TEST)"
-description="(En TEST, voir la documentation pour les détails.)\nPour voir et synchroniser les paiements effectués sur HelloAsso, et transformer les adhésions en membres Paheko.\nAucune information n'est modifiée dans le compte HelloAsso."
+name="HelloAsso"
+description="Pour voir et synchroniser les paiements effectués sur HelloAsso, et transformer les adhésions en membres Paheko.\nAucune information n'est modifiée dans le compte HelloAsso."
 author="Paheko"
 url="https://paheko.cloud/"
 doc_url="https://paheko.cloud/extension-helloasso"
-version="0.5.0"
+version="1.0.0"
 menu=false
 home_button=true
 min_version="1.3.19"
